# ggj-2025

./: .gitignore  .nvim.lua  CMakeLists.txt  todo
asset/: bubble.frag  default.frag  default.vert  skinned.vert
asset/3d/bubble/: Bubble.glb
asset/3d/crab/: crab.glb
asset/3d/jellyfish/: jellyfish.glb
asset/3d/pufferfish/: Pufferfish.glb  spike.glb
asset/3d/shark/: shark.glb
asset/3d/toad/: toad.glb
code/: collision.cpp  essentials.cpp  game.cpp  game.h  jellyfish.cpp  loader.cpp  loader.h  player.cpp  pufferfish.cpp  renderer.cpp  room_renderer.cpp  sharkfish.cpp
code/entities/: collectable.cpp  jellyfish.cpp  player.cpp  pufferfish.cpp  sharkfish.cpp
code/rendering/: renderer.cpp  room_renderer.cpp
raylib/src/: config.h  rlgl.h  rmodels.c
